Small changes in the text

--- a/Website.html
+++ b/Website.html
@@ -929,10 +929,10 @@
                 the helpless, the powerless, in a world of criminals who operate above the law.</p>
         </div>
         <div id="Visualiser" class="container pb-5 tab-pane fade">
-            <h2>Rainbow Mode</h2>
-            <p> Here you can set the mode to Visualiser. This mode is does and FFT on the ADC of the ESP8266 and maps the frequencies
+            <h2>Visualiser Mode</h2>
+            <p> Here you can set the mode to Visualiser. This mode does an FFT on the ADC of the ESP8266 and maps the frequencies
                 to the number of top and bottom LED's. To use this mode, an input source must be present on the ADC such as an amplified mic 
-                or an input from a music source such as a chromecast. 
+                or an input from a music source such as a Chromecast. 
             </p>
             <div>
                 <label for="visualiserPeriod"><b>Frequency Range</b>: <span id="visualiserPeriodLabel">2000</span>Hz</label>
