Updated website.html to match exact esp website

--- a/Website.html
+++ b/Website.html
@@ -151,7 +151,7 @@
                     }
                 }
 
-                // onColourButtonEvent(newRed, newGreen, newBlue)
+                setPickerColor(colourSelectButton, newRed, newGreen, newBlue);
             }
         }
 
@@ -202,7 +202,7 @@
                             }
                         }
 
-                        // onHourPickerEvent(newRed, newGreen, newBlue)
+                        setPickerColor(clockHourColourButton, newRed, newGreen, newBlue);
                     }
                 }
 
@@ -228,7 +228,7 @@
                             }
                         }
 
-                        // onMinPickerEvent(newRed, newGreen, newBlue)
+                        setPickerColor(clockMinuteColourButton, newRed, newGreen, newBlue);
                     }
                 }
             }
@@ -256,7 +256,7 @@
                     }
                 }
 
-                // onOnBellCurvePickerEvent(newRed, newGreen, newBlue)
+                setPickerColor(bellCurveSelectButton, newRed, newGreen, newBlue);
             }
         }
 
@@ -293,6 +293,7 @@
                         newBlue = jsonMessage.Blue
                     }
                 }
+                setPickerColor(sparkleSelectButton, newRed, newGreen, newBlue);
             }
         }
 
@@ -317,6 +318,7 @@
                         newBlue = jsonMessage.Blue
                     }
                 }
+                setPickerColor(colorWipeSelectButton, newRed, newGreen, newBlue);
             }
         }
 
@@ -341,6 +343,7 @@
                         newBlue = jsonMessage.Blue
                     }
                 }
+                setPickerColor(confettiSelectButton, newRed, newGreen, newBlue);
             }
         }
 
@@ -433,7 +436,17 @@
             } else {
                 console.warn("Websockets are closed")
             }
-        }       
+        }
+
+        function setPickerColor(picker, r, g, b) {
+            var rgb_color = 'rgb(' + r + ', ' + g + ', ' + b + ')';
+            picker.val(rgb_color);
+            picker.colorPicker.color.setColor(rgb_color);
+            picker.css({
+                backgroundColor: rgb_color,
+                color: picker.colorPicker.color.colors.RGBLuminance > 0.22 ? '#222' : '#ddd'
+            }).text(rgb_color);
+        }
     </script>
 
 </head>
@@ -686,7 +699,7 @@
                 var currentBlue = 0;
                 var colourDebunce = Date.now()
 
-                $('#colourSelectButton').colorPicker({
+                var colourSelectButton = $('#colourSelectButton').colorPicker({
                     customBG: '#222',
                     margin: '4px -2px 0',
                     doRender: 'div div',
@@ -709,6 +722,7 @@
                     renderCallback: function ($elm, toggled) {
                         var colors = this.color.colors;
                         onColourButtonEvent(Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
+                        setPickerColor(colourSelectButton, Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
                     }
                 })
                 $("#redButton").click(function () {
@@ -879,7 +893,7 @@
                 var currentMinGreen = 0
                 var currentMinBlue = 0
 
-                $('#clockHourColourButton').colorPicker({
+                var clockHourColourButton = $('#clockHourColourButton').colorPicker({
                     customBG: '#222',
                     margin: '4px -2px 0',
                     doRender: 'div div',
@@ -903,14 +917,10 @@
                     renderCallback: function ($elm, toggled) {
                         var colors = this.color.colors;
                         onHourPickerEvent(Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
-
-                        this.$colorPatch.css({
-                            backgroundColor: '#' + colors.HEX,
-                            color: colors.RGBLuminance > 0.22 ? '#222' : '#ddd'
-                        }).text(this.color.toString($elm._colorMode)); // $elm.val();
+                        setPickerColor(clockHourColourButton, Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
                     }
                 })
-                $('#clockMinuteColourButton').colorPicker({
+                var clockMinuteColourButton = $('#clockMinuteColourButton').colorPicker({
                     customBG: '#222',
                     margin: '4px -2px 0',
                     doRender: 'div div',
@@ -934,11 +944,7 @@
                     renderCallback: function ($elm, toggled) {
                         var colors = this.color.colors;
                         onMinPickerEvent(Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
-
-                        this.$colorPatch.css({
-                            backgroundColor: '#' + colors.HEX,
-                            color: colors.RGBLuminance > 0.22 ? '#222' : '#ddd'
-                        }).text(this.color.toString($elm._colorMode)); // $elm.val();
+                        setPickerColor(clockMinuteColourButton, Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
                     }
                 })
 
@@ -1024,7 +1030,7 @@
                 var bellGreen = 0
                 var bellBlue = 0
 
-                $('#bellCurveSelectButton').colorPicker({
+                var bellCurveSelectButton = $('#bellCurveSelectButton').colorPicker({
                     customBG: '#222',
                     margin: '4px -2px 0',
                     doRender: 'div div',
@@ -1048,11 +1054,7 @@
                     renderCallback: function ($elm, toggled) {
                         var colors = this.color.colors;
                         onOnBellCurvePickerEvent(Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
-
-                        this.$colorPatch.css({
-                            backgroundColor: '#' + colors.HEX,
-                            color: colors.RGBLuminance > 0.22 ? '#222' : '#ddd'
-                        }).text(this.color.toString($elm._colorMode)); // $elm.val();
+                        setPickerColor(bellCurveSelectButton, Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
                     }
                 })
 
@@ -1094,12 +1096,6 @@
                 <input id="sparkleSelectButton" class="color col mb-2 mx-2 btn btn-lg btn-outline-light"
                     value="rgb(0,0,0)"></input>
             </div>
-            <!--
-              <div>
-                  <label for="sparkleSpeed">Sparkle Speed: <span id="sparkleSpeedLabel">5</span> seconds</label>
-                  <input id="sparkleSpeed" type="range" min="0" max="10" step="1" value="5" class="form-control-range">
-              </div>
-            -->
             <script>
                 var sparkleLastMessage = ""
                 $("#sparkleSpeed").on("input", function () {
@@ -1113,7 +1109,7 @@
                 var sparkleBlue = 0;
                 var sparkleDebunce = Date.now()
 
-                $('#sparkleSelectButton').colorPicker({
+                var sparkleSelectButton = $('#sparkleSelectButton').colorPicker({
                     customBG: '#222',
                     margin: '4px -2px 0',
                     doRender: 'div div',
@@ -1136,6 +1132,7 @@
                     renderCallback: function ($elm, toggled) {
                         var colors = this.color.colors;
                         onSparkleButtonEvent(Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
+                        setPickerColor(sparkleSelectButton, Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
                     }
                 })
 
@@ -1202,7 +1199,7 @@
                 var colorWipeBlue = 0
                 var colorWipeDebunce = Date.now()
 
-                $('#colorWipeSelectButton').colorPicker({
+                var colorWipeSelectButton = $('#colorWipeSelectButton').colorPicker({
                     customBG: '#222',
                     margin: '4px -2px 0',
                     doRender: 'div div',
@@ -1227,10 +1224,7 @@
                         var colors = this.color.colors;
                         onColorWipeButtonEvent(Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
 
-                        this.$colorPatch.css({
-                            backgroundColor: '#' + colors.HEX,
-                            color: colors.RGBLuminance > 0.22 ? '#222' : '#ddd'
-                        }).text(this.color.toString($elm._colorMode)); // $elm.val();
+                        setPickerColor(colorWipeSelectButton, Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
                     }
                 })
 
@@ -1267,15 +1261,6 @@
         <div id="Confetti" class="container pb-5 tab-pane fade">
             <h2>Confetti Mode</h2>
             <p>Confetti will flash random colors to emulate confetti.</p>
-            <!-- 
-            <div class="row my-3">
-                  <input id="confettiSelectButton" class="color col mb-2 mx-2 btn btn-lg btn-outline-light" value="rgb(0,0,0)"></input>
-              </div>
-              <div>
-                  <label for="confettiSpeed">Confetti Speed: <span id="confettiSpeedLabel">5</span></label>
-                  <input id="confettiSpeed" type="range" min="0" max="10" step="1" value="5" class="form-control-range">
-              </div>
-              -->
             <script>
                 var confettiLastMessage = ""
                 var confettiRed = 0;
@@ -1283,7 +1268,7 @@
                 var confettiBlue = 0;
                 var confettiDebunce = Date.now()
 
-                $('#confettiSelectButton').colorPicker({
+                var confettiSelectButton = $('#confettiSelectButton').colorPicker({
                     customBG: '#222',
                     margin: '4px -2px 0',
                     doRender: 'div div',
@@ -1306,6 +1291,7 @@
                     renderCallback: function ($elm, toggled) {
                         var colors = this.color.colors;
                         onConfettiButtonEvent(Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
+                        setPickerColor(confettiSelectButton, Math.round(colors.rgb.r * 255), Math.round(colors.rgb.g * 255), Math.round(colors.rgb.b * 255))
                     }
                 })
 
